--- a/alpha-shop/src/components/Phases/Phases.module.css
+++ b/alpha-shop/src/components/Phases/Phases.module.css
@@ -87,7 +87,7 @@
     margin-top: 50px;
 }
 .formTitle{
-    margin: 10px 0;
+    margin: 40px 0 10px;
     font-size: 24px;
     font-weight: 700;
     color: #2A2A2A;
