--- a/alpha-shop/src/App.module.css
+++ b/alpha-shop/src/App.module.css
@@ -1,66 +1,57 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.siteMain{
-    display: grid;
-    grid-template-rows: repeat(3, auto);
-    grid-row-gap: 10px;
-    max-width: 80%;
-    margin: auto;
-    padding: 20px 0;
+.siteMain {
+  display: grid;
+  grid-template-rows: repeat(3, auto);
+  grid-row-gap: 10px;
+  max-width: 80%;
+  margin: auto;
+  padding: 20px 0;
 }
 
 .mainContainer {
-    grid-row: 1/2;
+  grid-row: 1/2;
+  min-height: 450px;
 }
 
 .buttonGroup {
-    grid-row: 3/4;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 40px;
-    padding-top: 20px;
-    border-top: 1px solid #E6E6EB;
+  grid-row: 3/4;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+  padding-top: 20px;
+  border-top: 1px solid #e6e6eb;
 }
-
 
 /* 購物籃 */
 .cartContainer {
+  grid-row: 2/3;
+  padding: 32px 24px;
+  border: 1px solid #f0f0f5;
+  border-radius: 8px;
+}
+
+@media screen and (min-width: 720px) {
+  .siteMain {
+    display: grid;
+    grid-template-columns: 7fr 5fr;
+    grid-template-rows: repeat(2, auto);
+    grid-gap: 0 50px;
+  }
+  .mainContainer {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  .buttonGroup {
+    grid-column: 1/2;
     grid-row: 2/3;
-    padding: 32px 24px;
-    border:1px solid #F0F0F5;
-    border-radius: 8px;
+  }
+  .cartContainer {
+    grid-column: 2/3;
+    grid-row: 1/3;
+  }
 }
-
-@media screen and (min-width:720px) {
-    .siteMain {  
-        display: grid;
-        grid-template-columns: 7fr 5fr;
-        grid-template-rows: repeat(2, auto);
-        grid-gap: 0 50px;
-    }
-    .mainContainer {
-        grid-column: 1/2;
-        grid-row: 1/2;
-    }
-    .buttonGroup{
-        grid-column: 1/2;
-        grid-row: 2/3;
-    }
-    .cartContainer {
-        grid-column: 2/3;
-        grid-row:1/3;
-    }
-}
-
-
-
-
-
-
-
-
-
