--- a/alpha-shop/src/components/Cart/Cart.module.css
+++ b/alpha-shop/src/components/Cart/Cart.module.css
@@ -1,57 +1,60 @@
-.cartTitle{
-    color: #2A2A2A;
-    font-size: 18px;
+.cartTitle {
+  color: #2a2a2a;
+  font-size: 18px;
 }
-.productContainer{
-    display: flex;
-    justify-content: space-between;
-    margin: 34px 0;
+.productContainer {
+  display: flex;
+  justify-content: space-between;
+  margin: 34px 0;
 }
-.productInfo{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: space-between;
-} 
-.productName{
-    margin-bottom: 15px;
-    text-align: end;
-    font-size: 16px;
+.productInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
 }
-.productControl{
-    display: flex;
-    align-items: center;
-}   
-.productCount{
-    margin: 0 30px;
+.productName {
+  margin-bottom: 15px;
+  text-align: end;
+  font-size: 16px;
+}
+.productControl {
+  display: flex;
+  align-items: center;
+}
+.controlButton {
+  cursor: pointer;
+}
+.productCount {
+  margin: 0 30px;
 }
 .itemImg {
-    width: 100px;
-    border-radius: 4px;
+  width: 100px;
+  border-radius: 4px;
 }
-.productPrice{
-    font-size: 16px;
-    font-weight: 700;
+.productPrice {
+  font-size: 16px;
+  font-weight: 700;
 }
-.cartInfo{
-    display: flex;
-    justify-content: space-between;
-    margin: 20px 0 10px;
-    padding: 20px 0;
-    border-bottom: 1px solid #F0F0F5;
+.cartInfo {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0 10px;
+  padding: 20px 0;
+  border-bottom: 1px solid #f0f0f5;
 }
 
-@media screen and (min-width : 720px) {
-    .productContainer{
+@media screen and (min-width: 720px) {
+  .productContainer {
     justify-content: flex-start;
-    }
-    .productInfo {
-        flex-grow: 1;
-        flex-direction: row;
-        align-items: baseline;
-        margin-left: 20px;
-    }
-    .productName{
-        text-align: start;
-    }   
+  }
+  .productInfo {
+    flex-grow: 1;
+    flex-direction: row;
+    align-items: baseline;
+    margin-left: 20px;
+  }
+  .productName {
+    text-align: start;
+  }
 }
